# glrhi

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  TODO.md
.VSCodeCounter/2025-06-05_21-13-07/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-06-05_21-13-24/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-06-05_21-13-39/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
docs/: Doxyfile
docs/html/: annotated.html  annotated_dup.js  camera_8hpp.html  camera_8hpp.js  camera_8hpp_source.html  classes.html  classglrhi_1_1camera-members.html  classglrhi_1_1camera.html  classglrhi_1_1camera.js  classglrhi_1_1compute-members.html  classglrhi_1_1compute.html  classglrhi_1_1compute.js  classglrhi_1_1debugCamera-members.html  classglrhi_1_1debugCamera.html  classglrhi_1_1debugCamera.js  classglrhi_1_1ebo-members.html  classglrhi_1_1ebo.html  classglrhi_1_1ebo.js  classglrhi_1_1fbo-members.html  classglrhi_1_1fbo.html  classglrhi_1_1fbo.js  classglrhi_1_1material-members.html  classglrhi_1_1material.html  classglrhi_1_1material.js  classglrhi_1_1mesh-members.html  classglrhi_1_1mesh.html  classglrhi_1_1mesh.js  classglrhi_1_1shader-members.html  classglrhi_1_1shader.html  classglrhi_1_1shader.js  classglrhi_1_1ssbo-members.html  classglrhi_1_1ssbo.html  classglrhi_1_1ssbo.js  classglrhi_1_1texture2D-members.html  classglrhi_1_1texture2D.html  classglrhi_1_1texture2D.js  classglrhi_1_1ubo-members.html  classglrhi_1_1ubo.html  classglrhi_1_1ubo.js  classglrhi_1_1vao-members.html  (+74 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  files_0.js  files_1.js  files_2.js  files_3.js  files_5.js  files_6.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  (+18 more)
docs/latex/: annotated.tex  camera_8hpp.tex  camera_8hpp_source.tex  classglrhi_1_1camera.tex  classglrhi_1_1compute.tex  classglrhi_1_1debugCamera.tex  classglrhi_1_1ebo.tex  classglrhi_1_1fbo.tex  classglrhi_1_1material.tex  classglrhi_1_1mesh.tex  classglrhi_1_1shader.tex  classglrhi_1_1ssbo.tex  classglrhi_1_1texture2D.tex  classglrhi_1_1ubo.tex  classglrhi_1_1vao.tex  classglrhi_1_1vbo.tex  classglrhi_1_1window.tex  compute_8hpp.tex  compute_8hpp_source.tex  debugcam_8hpp.tex  debugcam_8hpp_source.tex  ebo_8hpp.tex  ebo_8hpp_source.tex  fbo_8hpp.tex  fbo_8hpp_source.tex  files.tex  glrenderer_8hpp_source.tex  glrhi_8hpp_source.tex  index.tex  material_8hpp_source.tex  md__2home_2jan_2dev_2glrhi_2EXAMPLES.tex  md__2home_2jan_2dev_2glrhi_2TODO.tex  md__2home_2jan_2glrhi_2EXAMPLES.tex  md__2home_2jan_2glrhi_2TODO.tex  mesh_8hpp.tex  mesh_8hpp_source.tex  refman.tex  shader_8hpp.tex  shader_8hpp_source.tex  ssbo_8hpp.tex  (+12 more)
examples/camera/shaders/: basic.vert
examples/camera/src/: main.cpp
examples/compute/shaders/: buffer.frag  buffer.vert  compute.comp
examples/compute/src/: main.cpp
examples/framebuffer/shaders/: basic.frag  buffer.frag
examples/framebuffer/src/: main.cpp
examples/material/shaders/: basic.frag  basic.vert
examples/material/src/: main.cpp
examples/mesh/shaders/: basic.vert
examples/mesh/src/: main.cpp
examples/model/shaders/: basic.frag  basic.vert
examples/model/src/: main.cpp
examples/renderer/shaders/: buffer.frag  buffer.vert  lighting.comp  out.frag  out.vert  postprocess.comp  skybox.frag  skybox.vert  ssao.comp
examples/renderer/src/: main.cpp
include/: ebo.hpp  shader.hpp  vao.hpp  vbo.hpp  window.hpp
include/glrhi/: ebo.hpp  glrenderer.hpp  glrhi.hpp  renderer.hpp  shader.hpp  texture.hpp  vao.hpp  vbo.hpp  window.hpp
shaders/: drawVoxels.frag  drawVoxels.geom  drawVoxels.vert  gbuffer.frag  lighting.comp  resoult.frag  resoult.vert  skybox.frag  voxelClear.comp  voxelization.frag  voxelization.geom  voxelization.vert
src/: compute.cpp  ebo.cpp  fbo.cpp  main.cpp  shader.cpp  ssbo.cpp  texture.cpp  texture2D.cpp  ubo.cpp  vao.cpp  vbo.cpp  window.cpp
src/core/: compute.cpp  ebo.cpp  fbo.cpp  shader.cpp  ssbo.cpp  stb.cpp  texture2D.cpp  ubo.cpp  vao.cpp  vbo.cpp  window.cpp
src/renderer/: camera.cpp  debugcam.cpp  gbuffer.cpp  material.cpp  mesh.cpp  model.cpp  renderer.cpp  scene.cpp
(+31 files in other folders)
